--- a/src/Nav.css
+++ b/src/Nav.css
@@ -22,3 +22,14 @@
     font-size: 2.5rem;
     cursor: default;
 }
+
+@media (max-width: 480px) {
+    .nav_logo {
+        font-size: 24px;
+    }
+
+    .nav {
+        padding-left: 0;
+        padding-top: 15px;
+    }
+}
